Create gig model

--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\201901312248206_CreateGigTable.Designer.cs">
       <DependentUpon>201901312248206_CreateGigTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902010041180_OverrideConventionsForGigsAndGenre.cs" />
+    <Compile Include="Migrations\201902010041180_OverrideConventionsForGigsAndGenre.Designer.cs">
+      <DependentUpon>201902010041180_OverrideConventionsForGigsAndGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -276,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901312248206_CreateGigTable.resx">
       <DependentUpon>201901312248206_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902010041180_OverrideConventionsForGigsAndGenre.resx">
+      <DependentUpon>201902010041180_OverrideConventionsForGigsAndGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
