--- a/Gighub/Gighub.csproj
+++ b/Gighub/Gighub.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\201902010041180_OverrideConventionsForGigsAndGenre.Designer.cs">
       <DependentUpon>201902010041180_OverrideConventionsForGigsAndGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902010055315_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201902010055315_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201902010055315_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -283,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902010041180_OverrideConventionsForGigsAndGenre.resx">
       <DependentUpon>201902010041180_OverrideConventionsForGigsAndGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902010055315_PopulateGenresTable.resx">
+      <DependentUpon>201902010055315_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
